--- a/navbar/style.css
+++ b/navbar/style.css
@@ -76,14 +76,40 @@ nav {
 
 
 
+.hamburger {
+    display: none;
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: #38bdf8;
+}
 
+@media (max-width: 768px) {
 
+    .hamburger {
+        display: block;
+    }
 
+    .nav-links {
+        position: absolute;
+        top: 90px;
+        left: 0;
+        width: 100%;
+        background: #0f172a;
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+        padding: 2rem 0;
 
+        display: none;
+        /* hidden by default */
+    }
 
+    .nav-links.active {
+        display: flex;
+    }
 
-
-
-
-
-
+    .btns {
+        display: none;
+        /* optional hide login */
+    }
+}
